--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,11 @@ body {
   border-radius: 46%;
 }
 
+.cat-left-ear {
+position: absolute;
+top: -26px;
+left: -31px;
+  border-left: 35px solid transparent;
+  border-right: 35px solid transparent;
+  border-bottom: 70px solid #5e5e5e;
+}
